--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -37,8 +37,12 @@ tavily-python==0.3.5
 pytest==7.4.4
 pytest-asyncio==0.23.3
 pytest-cov==4.1.0
+pytest-benchmark==4.0.0
 httpx==0.26.0
 faker==19.0.0
+
+# 性能测试
+locust==2.29.0
 
 # 开发工具
 black==23.12.1
