--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -7,8 +7,8 @@ WORKDIR /app
 # 复制 package 文件
 COPY package*.json ./
 
-# 安装依赖
-RUN npm ci --only=production && \
+# 安装所有依赖（包括 devDependencies，构建需要 vite）
+RUN npm ci && \
     npm cache clean --force
 
 # 复制源代码
